@@ -1,6 +1,6 @@
 Package: polyRAD
-Version: 1.6.0.9000
-Date: 2022-03-22
+Version: 1.6.0.9001
+Date: 2022-04-03
 Title: Genotype Calling with Uncertainty from Sequencing Data in Polyploids and Diploids
 Authors@R: c(person("Lindsay V.", "Clark", email = "lvclark@illinois.edu",
                     role = c("aut", "cre"), 
